adding jest config, screenshots and updated readme

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Small example of how code coverage highlights insufficient unit testing",
   "main": "example.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
